--- a/app/ui/lib/css/bootstrap.css
+++ b/app/ui/lib/css/bootstrap.css
@@ -289,9 +289,9 @@ table {
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
 html {
@@ -750,6 +750,8 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
 }
 
 .container:before,
