--- a/app/ui/lib/css/jquery.weekcalendar.css
+++ b/app/ui/lib/css/jquery.weekcalendar.css
@@ -201,17 +201,17 @@ table.wc-time-slots {
 }
 
 .wc-cal-event {
-    background-color: #68a1e5;
-  /* Modern Browsers */ opacity: 0.8;
-  /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-  /* IE 5-7 */ filter: alpha(opacity=80);
-  /* Netscape */ -moz-opacity: 0.8;
-  /* Safari 1 */ -khtml-opacity: 0.8;
+    background-color: #DDD;
+  /* Modern Browsers */ /*opacity: 0.8;*/
+  /* IE 8 */ /*-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";*/
+  /* IE 5-7 */ /*filter: alpha(opacity=80);*/
+  /* Netscape */ /*-moz-opacity: 0.8;*/
+  /* Safari 1 */ /*-khtml-opacity: 0.8;*/
     position: absolute;
     text-align: center;
     overflow: hidden;
     cursor: pointer;
-    color: #fff;
+    color: #FFF;
     width: 100%;
     display: none;
 }
@@ -229,9 +229,9 @@ table.wc-time-slots {
 }
 
 .wc-cal-event .wc-time {
-    background-color: #2b72d0;
-    border: 1px solid #1b62c0;
-    color: #fff;
+    background-color: #FAD163;
+    border: 1px solid #FAD163;
+    color: #FFF;
     padding: 0;
     font-weight: bold;
 }
